--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# files to ignore
+
+Dec_Summary_Stats.png
+June_Summary_Stats.png
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
